@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2013, 2023 Lablicate GmbH.
+ * Copyright (c) 2013, 2024 Lablicate GmbH.
  * 
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -46,7 +45,7 @@ public class FileSettingUtil implements IStringSerialization<File> {
 
 		if(data != null && !data.isEmpty()) {
 			try {
-				return Arrays.stream(objectMapper.readValue(data, String[].class)).map(value -> new File(value)).collect(Collectors.toList());
+				return Arrays.stream(objectMapper.readValue(data, String[].class)).map(File::new).toList();
 			} catch(IOException e) {
 			}
 		}
